--- a/src/components/admin-table/admin-table.scss
+++ b/src/components/admin-table/admin-table.scss
@@ -672,10 +672,11 @@ p.infoText {
   cursor: none;
   color: red;
   font-weight: 600;
+  text-decoration: underline;
   }
 
 .deleteBtn:hover {
-  background-color: #b13636;
+  background-color: #3d3d3d;
   color: white;
   border: 1px solid #b13636;
 }
