added save subject table button to admin view of PT. cleaned up unused state updates of pointTrackers

--- a/src/components/point-tracker-table/point-tracker-table.scss
+++ b/src/components/point-tracker-table/point-tracker-table.scss
@@ -101,6 +101,12 @@
   }
 }
 
+.save-subjects {
+  display: block;
+  width: 25%;
+  margin-top: 2.2em;
+}
+
 .modal-footer {
   padding: 1em 0 !important;
   justify-content: flex-start !important;
