adds padding to titles on span class

--- a/src/components/mentor-content/_mentor-content.scss
+++ b/src/components/mentor-content/_mentor-content.scss
@@ -51,7 +51,11 @@
     display: block;
     line-height: 30px;
     height: 30px;
-    margin-bottom: 4px;
+    margin-bottom: 10px;
+  }
+  
+  .title {
+    padding-top: 15px;
   }
 
   .icon:before {
