--- a/src/components/subject-column/subject-column.scss
+++ b/src/components/subject-column/subject-column.scss
@@ -8,17 +8,17 @@ svg > path {
 }
 
 .column-rows {
-  display: inline-block;
-  height: 3em;
-  width: 5em;
-  padding: .5em;
-  margin: .2em;
-  text-align: center;
-  font-size: 16px;
+  // display: inline-block;
+  // height: 3em;
+  // width: 5em;
+  // padding: .5em;
+  // margin: .2em;
+  // text-align: center;
+  // font-size: 16px;
 }
 
 .column data input {
-  margin-bottom: 5px;
+  // margin-bottom: 5px;
 }
 
 .invalid-scores {
