point tracker table converted to css grid

--- a/src/components/point-tracker-form/point-tracker-form.scss
+++ b/src/components/point-tracker-form/point-tracker-form.scss
@@ -64,8 +64,8 @@ select {
   margin: 5px 0px;
   display: inline-block;
   width: 50%;
-  // margin-right: 4px;
-  // float: left;
+  margin-right: 4px;
+  float: left;
 }
 
 .survey-questions input,
@@ -131,7 +131,7 @@ select {
   }
 
   .synopsis h4 {
-    // padding-top: 1em;
+    padding-top: 1em;
     padding-bottom: 1.6em;
   }
 }
