import modal showing and file name captured.

--- a/src/components/admin-table/admin-table.scss
+++ b/src/components/admin-table/admin-table.scss
@@ -26,16 +26,16 @@ p.infoText {
     }
 
     .toolbar-btn-import {
-      background: grey;
-      border: 1px solid grey;
+      background: #1186B4;
+      border: 1px solid #1186B4;
       font-family: "Raleway", Helvetica, Arial, sans-serif;
       color: white;
       font-size: 12px;
       position: relative;
 
       &:hover {
-        background: grey;
-        border: 1px solid grey;
+        background: #04668c;
+        border: 1px solid #04668c;
       }
     }
 
