issue with navbar styling fixed (mystery). substitute student list sorting made case agnostic. filtered out tutorial from subjects if student is elementary.

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -35,12 +35,17 @@
     width: 14em;
   }
 
+  .gbtn {
+    width: 10em;
+  }
+  
   .login {
     color: white;
     float: right;
 
     .google-btn {
       width: 10em;
+      // height: 2em;
       margin: 1em;
     }
   }
